# nano-gpt

./: model.py  pyproject.toml  sample.py  train.py
data/openwebtext/: prepare.py
